# ESP32_YU_YIN_SHI_BIE

./: README.md  tensorflow_训练_PP.ipynb
ESP32_YU_YIN_SHI_BIE/: README_ESP.md  sdkconfig  sdkconfig.old
ESP32_YU_YIN_SHI_BIE/components/tfmicro/: CMakeLists.txt
ESP32_YU_YIN_SHI_BIE/components/tfmicro/tensorflow/lite/micro/: all_ops_resolver.cc  micro_interpreter.h
ESP32_YU_YIN_SHI_BIE/main/: CMakeLists.txt  audio_sample.cc  feature_provider.cc  main.cc  main_functions.cc  model.cc  model.h
